# icfpc2018

./: .gitignore  Feedback.txt  LICENSE  README.txt  TODO.org  default.nix  icfpc2018.cabal  register.txt  shell.nix  submit.sh
bench/: Solvers.hs
exe/: Solver.hs
src/ICFPC2018/: IO.hs  Model.hs  Pack.hs  Pipeline.hs  Prepare.hs  Primitives.hs  Scoring.hs  Simulation.hs  Tensor3.hs  Types.hs  Utils.hs  Validation.hs
src/ICFPC2018/Solvers/: ColumnSolver.hs  HighSolver.hs
tests/: Tests.hs
