name:                icfpc2018
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              ICFPC 2018
maintainer:          ab@fmap.me
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     ICFPC2018.Types
                     , ICFPC2018.Utils
                     , ICFPC2018.Tensor3
                     , ICFPC2018.Pack
                     , ICFPC2018.IO
                     , ICFPC2018.Model
                     , ICFPC2018.Validation
                     , ICFPC2018.Solvers.HighSolver
                     , ICFPC2018.Solvers.ColumnSolver
                     , ICFPC2018.Primitives
                     , ICFPC2018.Simulation
                     -- , ICFPC2018.Pipeline
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10
                     , linear
                     , containers
                     , binary
                     , bytestring
                     , vector
                     , pqueue
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  BinaryLiterals
                     , LambdaCase
                     , RecordWildCards
                     , ScopedTypeVariables
  ghc-options:         -Wall

executable solver
  main-is:             Solver.hs
  build-depends:       base >=4.10
                     , icfpc2018
                     , bytestring
                     , binary
                     , linear
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  main-is:             Tests.hs
  build-depends:       base >=4.10
                     , icfpc2018
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , ChasingBottoms
                     , vector
                     , containers
                     , linear
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
                     , LambdaCase
                     , RecordWildCards
  ghc-options:         -Wall
